--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary">
     <title>404 - ページが見つかりません | マイクロブログ</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
