--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary">
     <title>マイクロブログ</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/feed.xml">
 </head>
